@@ -68,7 +68,7 @@ switch ($_REQUEST['action']) {
 			exit; 
 		} 
 
-		$_SESSION['iframe']['target'] = Config::get('web_path') . '/stream.php?action=democratic'; 
+		$_SESSION['iframe']['target'] = Config::get('web_path') . '/stream.php?action=democratic&democratic_id=' . scrub_out($_REQUEST['democratic_id']); 
 		$results['rfc3514'] = '<script type="text/javascript">reload_util("'.$_SESSION['iframe']['target'].'")</script>';
 	break; 
 	default: 
